# my-knowledge

./: .gitlab-codespace.yml  .gitpod.Dockerfile  .gitpod.yml  LICENSE  README.md
app/: Cargo.toml
app/src/: main.rs
app/src/handlers/: home.rs
app/src/public/: face.html  index.html  script.js  style.css
app/src/routes/: foo.rs  home.rs  mod.rs  users.rs
app/src/utils/: file.rs
src/: main.rs
web/public/: index.html  script.js  style.css
web/public/libs/: package-lock.json
web/public/pages/: hand.html
