[package]
name = "app"
version = "0.1.0"
edition = "2024"
authors = ["Edgard Ambrosio <edgard.junior.dev@gmail.com>"]
description = "features"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = ""
keywords = ["rust", "exemplo", "projeto"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
